--- a/ZaHunter/Info.plist
+++ b/ZaHunter/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app requires you to enable Location Services</string>
 </dict>
 </plist>
